# sam-workspace

./: .gitignore  Cargo.toml  Makefile copy.toml  Makefile.toml  README.md  sam.css
ahmad/: Cargo.toml  Dioxus.toml
ahmad/assets/: main.css
ahmad/src/: main.rs
axum_test/: Cargo.toml  README.md  curl.txt
axum_test/assets/: crm.css  main.css  tailwind.css
axum_test/migrations/: 0001_users.sql
axum_test/src/: error.rs  error1.rs  error_backup.rs  frontend.rs  main.rs  main2.rs  response.rs
axum_test/src/user/: auth.rs  mod.rs  password.rs  user_db.rs  user_emails.rs  user_routes.rs
base/backend/: Cargo.toml
base/backend/.sqlx/: query-039815248343ef715529daeb8a7d10ca82f1cb9d221a16fa3c9f4689a311a816.json  query-0fb8d1071e56feb8af067860a2bae92c80c69ae31bff222cd7c55257252e8625.json  query-119b0628bb353df4f2f861d41c1e227e773f191fa2bcab44e580756392927d6e.json  query-17c463748670d4183d8c359c64bffc763690c2e8ed9a474b924884e6473ecae9.json  query-2a45ac7c7b97c9fbe9573f2adecfdab62d9b41199e1371105e19613606d9234e.json  query-31afd5f9c2abdf5ebd5c04aed46102003331b0e64503877da6c5cd21ffa07128.json  query-32a4fe43c503c51388620c29322c7067f3e061eb83404b9fbda12dafc73cb7e6.json  query-43d69ef7cab207b1fe07a28d5bc6a7a173e973e58951f58040f406944c093be9.json  query-5fbd4d333726826031d4155f09f6675658bee9bc4ac5ce6adf2587156cb1c6d6.json  query-6065947311e4c1c91a5e9b5113785abe0c3cd66d71130f1fd4c1eaff994ee4f8.json  query-66cde41e7051f5883e7c5fb6687de1278a0bbd13c9505c7c062a72b66b73775b.json  query-693a01852faeb2cf27b403208fdc93f577c1b4bd4c6d93ba8c085c33e2455a7b.json  query-7c22fbe2d7163bff2eb84d19adffd2f6fe88d625a0bd43d51a0a80917c99ddc2.json  query-81a23d78ed78ce83fc32725fefddd6b28dbccf34e78dbec67d0b8f78dbedefa1.json  query-8518cd9f1c6b4e1c42faddc5cc8a9219fb13a15b192676197fbd0a16b8fa503b.json  query-8dacba31810410619b3c98de6b8df412ab71c90fdf3aa55ada3399fb71539d89.json  query-8ed992aa1b2df43d9b76feca43912d7cb6363cbbbedd2c1b844d6439f3ba0eb8.json  query-9073b2b6ff0e04da71cfa2143a94a6f576d468fdd11ff6415d7c1a65895bbecd.json  query-9735ef75d004eace87493d0b0b818d6b96367ce14d00f9f51e45651409d9d585.json  query-b01f66f80cf47ecabe01cca884a9f799cee492841d7d0b12df81ac008573595b.json  query-b479c733da761b57041202dee0dcce1f38e3ad63fa34390601b58d5362bae100.json  query-babf0b264bebbddef3d7240301392c29d9846e9faa46213db888c3c05f557dd9.json  query-c2b2b8843b482513f8b3aa75fbb4e847044958dfbcfa9dd8ca1c9e18ea6e266d.json  query-c4ac78de8b3b7f5ce02b8a5d293f66e5524b9e0f17110aa2d2c8d60f53d60c8f.json  query-d2682c45752c702db54392802e98ed4c87788f1963f37da575ceee6f79c7e25d.json  query-ea9e3afcd61f69852031c65ec8ca795105286c898b6b66f4d306581113469040.json  query-eb716f4dfb7da137f15816365a4f255e7fbe86cccf1a1236c548ad5b407a5420.json  query-f1e02f149f0e1d58ac0099a6f3c1c54792e7bc0208706d164e6343f503e9bdce.json  query-f1fdfa03761c2fb8b46f31ba7b3402963189a2fcedae60f412f8a965da9b542f.json  query-fd4294bcd5b621102ecdce1bc067455b91ac2ebc693997d2e63cd1a8c43a1e45.json
base/backend/migrations/: 20250713152814_create_init_tables.sql
base/backend/src/: error.rs  main.rs  response.rs  utils.rs
base/backend/src/abac/: mod.rs  policy.rs
base/backend/src/category/: category_db.rs  category_routes.rs  mod.rs
base/backend/src/field/: field_db.rs  mod.rs
base/backend/src/language/: language_db.rs  language_routes.rs  mod.rs
base/backend/src/listing/: mod.rs
base/backend/src/user/: cookie.rs  jwt.rs  login_with_google.rs  mod.rs  test.html  user_db.rs  user_emails.rs  user_routes.rs
base/frontend/: Cargo.toml  input.css  package-lock.json
base/frontend/assets/: tailwind.css
base/frontend/src/: constants.rs  enviroment.rs  input.rs  lib.rs  models.rs  route.rs
base/frontend/src/components/: add_category_backup.rs  categories.rs  dashboard_navbar.rs  fields.rs  guard.rs  language.rs  mod.rs
base/frontend/src/pages/: dashboard.rs  home.rs  login copy 2.rs  login copy.rs  login.rs  login_backup.rs  mod.rs
base/run_frontend/: Caddyfile  Cargo.toml
base/run_frontend/src/: main.rs
base/shared/: Cargo.toml
base/shared/src/: abac.rs  accounting.rs  category.rs  dashboard.rs  field.rs  lib.rs  misc.rs  user.rs
db/: Cargo.toml
db/.sqlx/: query-00ca292889e7f420324a86f4e0612ea7e1d1665934689c6f5e20736c2f896e66.json
db/migrations/: 0001_users.sql
db/src/: main.rs
demo/: Cargo.toml
demo/src/: main.rs
demo_frontend/: Cargo.toml  Dioxus.toml
demo_frontend/src/: main.rs
examples/menu_example/: Cargo.toml  Dioxus.toml
examples/menu_example/assets/: main.css
examples/menu_example/src/: main.rs
learning/: Cargo.toml
learning/src/: main.rs
rasheed/: Cargo.toml
rasheed/src/: main.rs  quotes.txt
sam_desktop/: Cargo.toml  README.md
sam_desktop/src/: lib.rs  pdf.rs
sam_error/: Cargo.toml  README.md
sam_error/src/: lib.rs
sam_frontend/: Cargo.toml  Dioxus.toml
sam_frontend/src/: main.rs
sam_icon/: Cargo.toml
sam_icon/src/: icon.rs  lib.rs
sam_proc_macros/: Cargo.toml  README.md
sam_proc_macros/src/: catch_error.rs  lib.rs
sam_ui/: Cargo.toml
sam_ui/assets/: header.css  input.css
sam_ui/src/: animation.rs  element.rs  input.rs  lib.rs  menu copy.rs  menu.rs  popup.rs  spinner.rs
sam_ui/src/header/: dropdown_menu.rs  menu.rs  menu_list.rs
sam_ui/src/slideshow/: mod copy.rs  mod.rs
sam_util/: Cargo.toml
sam_util/assets/: header.css  main.css
sam_util/src/: api.rs  browser.rs  dataset.rs  device.rs  gmail.rs  lib.rs  random.rs  validators.rs  web.rs
sam_util/src/menu/: menu.rs  mod.rs
ssr_test/: Cargo.toml  Dioxus.toml
ssr_test/src/: main.rs
test2/: Cargo.toml  Dioxus.toml  README.md
test2/assets/: sam.css
test2/assets/styling/: blog.css  main.css  navbar.css
test2/src/: main.rs
test2/src/components/: hero.rs  navbar.rs
test2/src/views/: blog.rs  home.rs
test_backend/: Cargo.toml
test_backend/src/: main.rs
testo/: Cargo.toml
testo/assets/: router.css
testo/src/: main.rs
