[workspace]
members = [ "sam_ui", "sam_util", "testo", "test2", "db", "auth", "axum_test", 
    "sam_proc_macros", "learning", "sam_error", "ssr_test", "sam_frontend", "demo", 
    "demo_frontend", "base/backend", 'base\frontend', "base/run_frontend"
, "sam_icon", "ahmad", "rasheed"]
resolver = "2"

[workspace.dependencies]
dioxus = "0.6.1"
dioxus-ssr = "0.6.1"
dioxus-web = "0.6.1"
dioxus-sdk = "0.6.0"

wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"
gloo-storage = "0.3.0"

headless_chrome = "1.0.15"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
regex = "1.11.1"
validator = "0.20.0"
axum = "0.8.1"
thiserror = "2.0.11"
sqlx = "0.8.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["std"] }
reqwest = "0.12.15"



# My Libs
sam_util = {path = "sam_util"}
sam_ui = {path = "sam_ui"}
sam_icon = {path = "sam_icon"}
sam_error = {path = "sam_error"}
sam_proc_macros = {path = "sam_proc_macros"}


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
