[package]
name = "demo_frontend"
version = "0.1.0"
authors = ["samerabla <samerfamilie@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
gloo-net = "0.5"
web-sys.workspace = true
serde_json = "1.0.140"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
