[package]
name = "sam_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true}
dioxus-web = { workspace = true}
dioxus-sdk = { workspace = true, features = ["timing"]}

wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [ "HtmlCollection","DomTokenList","Element","IntersectionObserver","IntersectionObserverInit","HtmlElement"] }
gloo-timers = {version = "0.3.0", features = ["futures"]}
gloo-storage = {workspace = true}

wasm-bindgen-futures = "0.4.50"


# My Libs
sam_util = { workspace = true}
sam_icon = { workspace = true}
