[package]
name = "sam_util"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true}
dioxus-sdk = { workspace = true, features = ["window_size"] }
wasm-bindgen.workspace = true
js-sys.workspace = true

rand = { workspace = true}
getrandom = { workspace = true}
regex = { workspace = true}
validator = { workspace = true }

lettre = { version = "0.11.14", optional = true }

[features]
gmail = ["dep:lettre"] 
