[package]
name = "ssr_test"
version = "0.1.0"
authors = ["samerabla <samerfamilie@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
dioxus-fullstack = "0.6"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
