[package]
name = "testo"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.1", features = ["web","router"]}
dioxus-sdk = { version = "0.6.0", features = ["window_size"] }
gloo-render = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
sam_util = {path = "../sam_util"}
serde_json = "1.0.138"
tokio = { version = "1.45.0", features = ["full"] }

#sam_desktop = {path = "../sam_desktop"}
#sam_ui = {path = "../sam_ui"}

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
