[package]
name = "testo"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.1", features = ["web","router"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
reqwest.workspace = true

#sam_desktop = {path = "../sam_desktop"}
#sam_ui = {path = "../sam_ui"}

[features]
default = ["web"]
web = ["dioxus/web"]
