[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys.workspace = true
gloo-storage = {workspace = true}

gloo-net = "0.5"

sam_util = {path = "../../sam_util"}
sam_ui = {path = "../../sam_ui"}
