[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-html = { version = "0.6.1", features = ["serialize"] }
dioxus-web = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
web-sys.workspace = true
gloo-storage = {workspace = true}

gloo-net = "0.5"

gloo-timers = {version = "0.3.0", features = ["futures"]}
wasm-bindgen = "0.2.100"


sam_util = {path = "../../sam_util"}
sam_ui = {path = "../../sam_ui"}
sam_icon = {path = "../../sam_icon"}
shared = {path = "../shared"}
