[package]
name = "run_frontend"
version = "0.1.0"
authors = ["samerabla <samerfamilie@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus.workspace = true
frontend = { path = "../frontend"}

[features]
default = ["web"]
web = ["dioxus/web"]


#[[web.proxy]]
#backend = "http://127.0.0.1:3000/"

[serve]
proxy = "http://127.0.0.1:3000"