[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true,optional = true, features = ["postgres","runtime-tokio-native-tls","uuid","time"] }
uuid = { workspace = true, features = ["serde", "v4"] }
time = { workspace = true, features = ["serde","parsing","formatting"] }
rust_decimal = {workspace = true}

[features]
default = []
frontend = []
backend = ["sqlx"]