[package]
name = "menu_example"
version = "0.1.0"
authors = ["rasheed-abla <rasheedabla08@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
sam_ui = {workspace = true}
sam_util = {workspace = true}
sam_icon = {workspace = true}
web-sys = {workspace = true}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
